Opened 9 years ago
Closed 9 years ago
#12864 closed bug (fixed)
DeskCalc no longer accepts color drops, to change its color.
Reported by: | Giova84 | Owned by: | stippi |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Applications/DeskCalc | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #12863 | |
Platform: | All |
Description
Once (maybe until the last year) was possible - eg dropping colors from the app Colors! or WonderBrush - to change the interface color of DeskCalc, currently is no longer possible: if I attempt to drop a color on DeskCalc nothing will happen.
However, if I launch DeskCalc from Terminal, i can see these messages:
Missing rgbBaseColor from CalcView archive! Missing rgbBaseColor from CalcView archive! Missing expression text from CalcView archive.
Change History (4)
comment:1 by , 9 years ago
comment:2 by , 9 years ago
Blocking: | 12863 added |
---|
comment:3 by , 9 years ago
The terminal messages indicate that the base color and expression text have not been saved to the settings file, so it uses the default. The color drop no longer working seems to be caused by something looncraz did as part of his color setting work.
Note:
See TracTickets
for help on using tickets.
Sorry for the dup ticket:12863; please delete 12863 since it not contains the component "Applications/DeskCalc".