Deskcalc: Don't set base color on _Colorize()

Fixes #12864